--- a/config
+++ b/config
@@ -1,3 +1,3 @@
 name              :    Sank Me
 cookie            :   __user
-logo              :  sank_business.jpg
+logo              :  photo.jpg
